Bug 1358634 - Handle fallback to default variable font in case of nonexistant generic ; r=heycam

MozReview-Commit-ID: GHUfkmJNgqG